--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "axios-hooks": "^2.6.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^16.0.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
